--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,6 +35,11 @@
 
 .Metric > p {
   padding: 8px;
+}
+
+.FormContent {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .Header {
