patient form QOL improvements

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,8 @@
 .FormContent {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
   column-gap: .5em;
 }
 
