custom fields saving (broken)

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   column-gap: .5em;
 }
 
